# gain-staging-app

./: .gitignore  README.md  gain stage core.md
ara-plugin/: CMakeLists.txt
ara-plugin/src/: ARAPlugin.cpp  ARAPlugin.h  GainMapBridge.cpp
docs/: ARASpec.md  ArchitectureDecisionLog.md  CodingStandards.md  GainDecisionModel.md  PRD.md  StandaloneSpec.md  architecture.md  gain-map-schema.md
docs/Validation/: GainStage_Phase1A_Architecture_Compliance_Checklist.md  GainStage_Phase1_Validation_Checklist.md
docs/superpowers/plans/: 2026-06-23-gain-stage-scaffold.md  2026-06-24-phase2-dsp-pipeline.md
docs/superpowers/specs/: 2026-06-23-phase1-completion-design.md  2026-06-24-phase2-design.md  2026-06-25-phase3-design.md
gain-ara/: CMakeLists.txt
gain-ara/src/: GainMapBridge.h
gain-ara/stubs/: ara_stubs.h
gain-core/: Cargo.toml
gain-core/crates/analysis/: Cargo.toml
gain-core/crates/analysis/src/: envelope.rs  lib.rs  loudness.rs  transient.rs
gain-core/crates/audio_ingestion/: Cargo.toml
gain-core/crates/audio_ingestion/src/: lib.rs
gain-core/crates/classification/: Cargo.toml
gain-core/crates/classification/src/: lib.rs
gain-core/crates/ffi/: Cargo.toml
gain-core/crates/ffi/include/: gain_stage_ffi.h
gain-core/crates/ffi/src/: lib.rs
gain-core/crates/gain-api/: Cargo.toml
gain-core/crates/gain-api/src/: lib.rs
gain-core/crates/gain-api/tests/: album.rs  e2e.rs  pipeline.rs
gain-core/crates/gain-error/: Cargo.toml
gain-core/crates/gain-error/src/: lib.rs
gain-core/crates/gain_decision/: Cargo.toml
gain-core/crates/gain_decision/src/: lib.rs
gain-core/crates/gain_map/: Cargo.toml
gain-core/crates/gain_map/src/: lib.rs
gain-core/crates/segmentation/src/: lib.rs
gain-core/fuzz/: Cargo.toml
gain-core/fuzz/fuzz_targets/: fuzz_analyze_pcm.rs
gain-standalone/: index.html
gain-standalone/src-tauri/: Cargo.toml  tauri.conf.json
gain-standalone/src-tauri/src/: dto.rs  main.rs
gain-standalone/src-tauri/src/commands/: analyze.rs  file.rs  mod.rs  version.rs
rust-core/crates/analysis/src/: spectral.rs
rust-core/crates/audio_ingestion/: Cargo.toml
rust-core/crates/ffi/src/: lib.rs
rust-core/crates/gain_decision/src/: lib.rs
rust-core/crates/gain_map/src/: lib.rs
rust-core/crates/segmentation/: Cargo.toml
test-assets/: README.md
