[package]
name = "gain-api"
version = "0.1.0"
edition = "2021"

[dependencies]
gain_map        = { path = "../gain_map" }
gain_decision   = { path = "../gain_decision" }
gain-error      = { path = "../gain-error" }
audio_ingestion = { path = "../audio_ingestion" }
analysis        = { path = "../analysis" }

[dev-dependencies]
tempfile = "3"
